# InfinityInstaller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  installer.manifest  premake5.lua  resources.rc.in  vcpkg.json
InfinityLauncherInstaller/: InfinityLauncherInstaller.vcxproj  imgui.ini  premake5.lua
InfinityLauncherInstaller/src/: InfinityLauncherInstaller.cpp  InfinityUI.cpp  InfinityUI.h  Pages.h  utils.h
Walnut/Walnut/Platform/GUI/Walnut/: ApplicationGUI.cpp  ApplicationGUI.h
Walnut/Walnut/Platform/GUI/Walnut/ImGui/: ImGuiTheme.cpp
Walnut/Walnut/Source/Walnut/Serialization/: StreamReader.h  StreamWriter.h
dependencies/Walnut/src/: EntryPoint.h  Layer.h
dependencies/Walnut/src/GUI/: ApplicationGUI.cpp  ApplicationGUI.h  Image.cpp
dependencies/Walnut/src/GUI/ImGui/: ImGuiTheme.cpp  ImGuiTheme.h
dependencies/Walnut/src/GUI/Input/: Input.cpp
dependencies/Walnut/src/GUI/UI/: Console.cpp  UI.h
dependencies/Walnut/src/Serialization/: BufferStream.cpp  BufferStream.h  StreamReader.h  StreamWriter.h
src/: InfinityLauncherInstaller.cpp  InfinityUI.cpp  InfinityUI.h  Pages.cpp  Pages.h  main.cpp
src/Backend/Application/: Application.cpp
src/Backend/Buffer/: Buffer.hpp
src/Backend/Installer/: Installer.cpp  Installer.h
src/Backend/Layer/: Layer.hpp
src/Backend/UiHelpers/: UiHelpers.cpp  UiHelpers.hpp
src/Components/: InfinityLogoPoints.h  PreDefCursorPositions.h  ProgressBar.h  WelcomeTextAnimation.cpp
src/Frontend/Components/: PreDefCursorPositions.h  ProgressBar.cpp  WelcomeTextAnimation.cpp  WelcomeTextAnimation.h
src/Frontend/InfinityUI/: InfinityUI.cpp  InfinityUI.hpp
src/Frontend/Pages/: Pages.cpp  Pages.h
src/Frontend/Theme/: Theme.cpp  Theme.hpp
src/Util/: FPSCounter.cpp  FPSCounter.h
